# doctly

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
doctly/: __init__.py  client.py
tests/: test_doctly.py
